# surface_nodes

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
examples/analysis/: scatter_kernal.ipynb
surface-nodes/: __init__.py  __init__.pyi  version.py
surface-nodes/calculators/: __init__.pyi  cp2k.py  mace_model.py
surface-nodes/configuration_modification/: __init__.pyi  mod_frames.py
surface-nodes/frame_filter/: __init__.pyi
surface-nodes/md/: __init__.pyi
surface_nodes/: __init__.py  __init__.pyi  utils.py  version.py
surface_nodes/calculators/: __init__.pyi  plumed_meta_dyn.py
surface_nodes/configuration_modification/: __init__.pyi  mod_frames.py
surface_nodes/frame_filter/: __init__.pyi  property_filter.py
surface_nodes/md/: __init__.pyi  constrains.py
surfnodes/: version.py
surfnodes/calculators/: mace_model.py
surfnodes/configuration_modification/: __init__.pyi
